# musicBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  client.py  credentials.py  docker-compose.yaml  func.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deoploy.yml  deploy.yml  update-yt-dlp.yml
nginx/: nginx.conf
src/config/: logging_conf.py  logging_config.py  settings.py
src/core/: bot.py  db.py  main.py  models.py  templates.py  utils.py
src/core/orm/: descriptors.py  models.py
src/db/: models.py
src/handlers/: __init__.py
src/handlers/main/: __init__.py  upload.py
src/handlers/user/: __init__.py  help.py  settings.py  start.py
src/models/: models.py
src/services/: auth.py  mongo.py  telethon.py  yt_dlp.py
src/services/download/: base.py
src/utils/: app_utils.py  auth_utils.py  bot_utils.py  dlp_utils.py
