[project]
name = "musicbot"
version = "0.1.0"
description = "Music Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "aiogram==3.17.0",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "async-timeout==5.0.1",
    "attrs==23.2.0",
    "brotli==1.1.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "coverage==5.5",
    "cryptg>=0.5.0.post0",
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "deprecation==2.1.0",
    "filetype==1.2.0",
    "frozenlist==1.4.1",
    "idna==3.7",
    "magic-filter==1.0.12",
    "multidict==6.0.5",
    "mutagen==1.47.0",
    "packaging==24.1",
    "pillow==10.4.0",
    "propcache==0.2.1",
    "pyaes==1.6.1",
    "pyasn1==0.6.0",
    "pycryptodomex==3.20.0",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.1",
    "requests==2.32.3",
    "rsa==4.9",
    "telethon==1.36.0",
    "tkhtmlview==0.3.0",
    "toml==0.10.2",
    "typing-extensions==4.12.2",
    "urllib3==2.2.2",
    "websockets==12.0",
    "yarl==1.18.3",
    "yt-dlp>=2025.6.25",
]
